<resources>
    <string name="app_name">Hamkor TV</string>
    <string name="next">Продолжить</string>
    <string name="about_app">Цифровое телевидение без дорогостоящих приставок</string>
    <string name="pick_language">Выбор языков</string>
    <string name="user_cabinet">Личный кабинет</string>
    <string name="contacts">Контакты</string>
    <string name="license">Лицензия</string>
    <string name="tariffs">Тарифы</string>
    <string name="accessable_chanel">Доступные каналы</string>
    <string name="user_arg">Договор оферта</string>
    <string name="quality">Наши заслуги</string>
    <string name="coverage_area">Зона охвата</string>
    <string name="wi_fi_free">WI-FI FREE</string>
    <string name="pick_adress">Выбрать Адрес</string>
    <string name="id_user">ID из программы</string>
    <string name="forgot_password">Забыли ID ?</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="contact_title_1">Адрес кассы ЧП «НАМКОR-TV»</string>
    <string name="contact_title_2">Режим работы кассы:</string>
    <string name="contact_title_3">Адрес отдела «Технической службы»</string>
    <string name="contact_title_4">Приём заявок от «Абонентов»</string>
    <string name="contact_title_5">Адрес офиса ЧП «НАМКОR-TV»</string>
    <string name="contact_title_6">Телефон приёмной ЧП «НАМКОR-TV»: 71 276-77-53</string>
    <string name="contact_title_7">Реквизиты</string>
    <string name="contact_content_1">г.Ташкент, Чиланзарский район, квартал 10, дом 11, квартира 87.</string>
    <string name="contact_content_2">с 10:00 до 18:00, пе«рерыв с 12:00 до 13:00 с 5 числа по последний день каждого месяца включительно, без выходных.</string>
    <string name="contact_content_3">Ташкент, Чиланзарский р-н, квартал 10, дом 11, квартира М 87, телефон М 71 276-83-84.</string>
    <string name="contact_content_4">с 9:00 до 18:00, перерыв с 1200 до 1300 ежедневно, без выходных. Приём Абонентов начальником технической службы понедельник, среда, суббота с 10:00 до 12:00</string>
    <string name="contact_content_5">г.Ташкент,100097, Чиланзарский район, проспект Бунёдкор дом 42.</string>
    <string name="contact_content_6">Республика Узбекистан, г Ташкент 100097, ул. Бунёдкор, 42, тел / факс: (99871) 276-77-53, E-mail: hamkorty-1@yandex. гн. Р/С М2 20208000703946716001, в Чиланзар ф-ле АКБ «Туронбанка», ИНН М2 202618590, МФО М2 01084, ОКЭД 61100</string>
    <string name="licenses_1">Лицензия для Эксплуатация и оказание услуг сетей рапространения телепередач</string>
    <string name="licenses_2">Лицензия для Эксплуатация и оказание услуг сетей передачаи данных</string>
    <string name="agr_1">Публичный договор (оферта) на пользование услугами кабельного телевидения.</string>
    <string name="agr_2">Частное предприятие «HAMKOR-TV», в лице директора Шеховцова В.Г., действующее на основании Устава предприятия, в дальнейшем именуемое «Исполнитель», и «Заказчик», проживающий на территории, охваченной сигналом кабельного телевидения ЧП «HAMKOR-TV» и имеющий «Абонентский шнур» заключают между собой договор (оферту). «Исполнитель» является надлежащим образом зарегистрированным юридическим лицом на основании решения городского Хокимията г. Ташкента, подтверждённым свидетельством за № 001088-08 от 08 апреля 2009 года, номер лицензии АА № 0005947, (эксплуатация и оказание услуг сетей распространения телепередач) и имеет право оказывать услуги в соответствии с Законодательством РУз. «Заказчик» изъявляет намерения поручить «Исполнителю» подключить «Абонентский шнур» к «Абонентской розетке» и обеспечивать прохождение телевизионного сигнала до телевизионного приемника « Абонента» с последующим обслуживанием. Вследствие вышеизложенного сторонами достигнута договоренность о нижеследующем:</string>
    <string name="agr_3">1. Определения и технические требования:</string>
    <string name="agr_4">1.1. «Абонентский шнур» - это коаксиальный кабель, определённой длинны (не более 35 метров), от «Абонентской розетки» до телевизионного приёмника «Заказчика». Он является собственностью «Заказчика» и должен быть без внешних и внутренних повреждений. «Исполнитель» обязуется обеспечить качественное прохождение ВЧ сигнала, достаточного для одного ТВ-приемника «Заказчика». 1.2 «Абонентская розетка» - это элемент для подключения с помощью абонентского шнура абонентских устройств. Он является собственностью «Исполнителя». 1.3 «Абонентская плата» - это ежемесячная фиксированная сумма, оплачиваемая «Заказчиком» за техническое обслуживание и обеспечение прохождения телевизионного сигнала до ТВ приёмника «Заказчика». 1.4 «Абонент» - это «Заказчик» своевременно оплачивающий «Абонентскую плату». 1.5 «Акцепт» - акцептом признаётся ответ лица, которому адресована Оферта о ее принятии. Оплата по настоящей Оферте признается её Акцептом, т.е. полным и безоговорочным принятием всех условий данной Оферты и всех её приложений. 1.6 «Техническая служба» - это отдел услуг «Исполнителя» принимающий письменные и телефонные сообщения о неисправностях (Диспетчер). 1.7 «Дни технической профилактики» - ремонтные работы для поддержания работоспособности и модернизации кабельной сети (не более 4-х дней в месяц). 1.8 «Диспетчер» - работник ЧП «HAMKOR-TV», который фиксирует технические неисправности и обращения абонентов в «Техническую службу», а также выполняет другие должностные обязанности согласно штатному расписанию. 1.9 «Заявка на ремонт» - запись в «Книге регистрации заявок» (возможна в электронном виде) о неисправности у «Абонента», с фиксацией даты, адреса, телефона, характера и длительности неисправности. «Заявка на ремонт» подаётся лично «Абонентом» в «Техническую службу». На основании заявки выписывается «Наряд на выполнение работ». 1.10 «Коллективная заявка» (Анонимная заявка) - обращение абонента в «Техническую службу» на неисправность в доме или в группе домов без указания собственного адреса абонента. Данные заявки не принимаются, но доводятся до сведения мастера диспетчером «Технической службы». 1.11 «Вещатель» - Организация, в данном случае ООО «О\'zbekiston Kabel Televideniyasi» имеющая право на оказание услуг по формированию сетки вещания и доставки единого лицензионно очищенного ТВ сигнала (программного блока). 1.12 «Публичный договор» публичным договором признаётся договор, заключенный организацией и устанавливающий ее обязанности по продаже товаров, выполнению работ или оказанию услуг, которые такая организация по характеру своей деятельности должна осуществлять в отношении каждого кто к ней обратится (розничная торговля, услуги связи и т.п.). 1.13 «Оферта» - это предложение заключить гражданско-правовой договор, содержащее все его существенные условия. 1.14 «Форс-мажор» - означает по отношению к любой из Сторон любые обстоятельства вне разумного контроля, включая, без ограничения стихийные бедствия (снегопад, дождь и др.), веерные отключения электроэнергии, повреждение кабельных линий или другую форму промышленных действий, аварии, пожары, принятие законодательных актов и Правительственных решений, влияющих на исполнение положений данной оферты.</string>
    <string name="agr_5">2.Предмет договора</string>
    <string name="agr_6">2.1 «Заказчик» поручает, а «Исполнитель» выполняет работы по установке оборудования “Исполнителя” и по подключению и отключению «Абонентского шнура» к «Абонентской розетке» и обеспечивает прохождение телевизионного сигнала до ТВ приёмника «Заказчика» в случае выполнения «Абонентом» условий Оферты.</string>
    <string name="agr_7">3.Права и обязанности Сторон:</string>
    <string name="licenses_3">Официальный документ о регистрации юридического лицо</string>
    <string name="value">Сумма</string>
    <string name="forMonth">За</string>
    <string name="dateOfPayment">Дата оплаты</string>
    <string name="send">Отправить</string>
    <string name="theme">Тема</string>
    <string name="messageText">Текст</string>
    <string name="select">Выбрать</string>
    <string name="cancel">Отмена</string>
    <string name="selectApartment">Выберите квартиру</string>
    <string name="notPaid">Не оплачено</string>
</resources>