<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/item_height"
    android:paddingTop="@dimen/small_padding"
    android:paddingBottom="@dimen/small_padding">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/dateOfPayment"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@id/payBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toTopOf="@id/payBtn" />

    <TextView
        android:id="@+id/month"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:gravity="center"
        android:text="@string/forMonth"
        android:textColor="@color/blackish"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value_text"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:gravity="center"
        android:text="@string/value"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/month" />

    <TextView
        android:id="@+id/payBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/notPaid"
        android:textColor="@color/blackish"
        android:textSize="@dimen/text_size"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/value_text" />
</androidx.constraintlayout.widget.ConstraintLayout>