<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.contacts.ContactsActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.main.contacts.ContactsActivity"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/licenses_3"
                android:textColor="#212121"
                android:textStyle="bold"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_marginTop="8dp"/>

        <uz.kashtan.hamkortv.utils.PinchImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/licenses"
                android:layout_marginTop="16dp"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/licenses_1"
                android:textColor="#212121"
                android:textStyle="bold"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_marginTop="24dp"/>

        <uz.kashtan.hamkortv.utils.PinchImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:src="@drawable/licenses_1" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/licenses_2"
                android:textColor="#212121"
                android:textStyle="bold"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_marginTop="24dp"/>

        <uz.kashtan.hamkortv.utils.PinchImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/licenses_2"
                android:layout_marginTop="16dp"
                />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
