<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.complaint.ComplaintActivity">

<!--    <TextView-->
<!--        android:id="@+id/tvFrom"-->
<!--        android:layout_width="@dimen/match_constraint"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="@dimen/standard_margin"-->
<!--        android:text="От"-->
<!--        android:textColor="#A9A9A9"-->
<!--        android:textSize="@dimen/text_size"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvUser"-->
<!--        android:layout_width="@dimen/match_constraint"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="@dimen/standard_margin"-->
<!--        android:text="User"-->
<!--        android:textColor="@color/colorBlack"-->
<!--        android:textSize="@dimen/text_size"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/tvFrom"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <View-->
<!--        android:id="@+id/line"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_marginTop="@dimen/standard_margin"-->
<!--        android:background="@color/cardview_dark_background"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvUser" />-->

    <EditText
        android:id="@+id/etTheme"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="64dp"
        android:hint="@string/theme"
        android:paddingStart="@dimen/standard_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTextMessage"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:backgroundTint="@color/white"
        android:gravity="top"
        android:hint="@string/messageText"
        android:paddingStart="@dimen/standard_margin"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/tvSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTheme" />

    <TextView
        android:id="@+id/tvSend"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/buttonColor"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>