<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dialog_min_width"
        android:minHeight="460dp">

        <FrameLayout
            android:id="@+id/flHeader"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/buttonColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"
                android:text="@string/selectApartment"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_header_size"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvApartment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toTopOf="@id/positiveButton"
            app:layout_constraintTop_toBottomOf="@+id/flHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="@dimen/margin_little"
            android:layout_marginBottom="@dimen/margin_little"
            android:gravity="center"
            android:minWidth="64dp"
            android:paddingStart="@dimen/margin_little"
            android:paddingEnd="@dimen/margin_little"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/buttonColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/positiveButton" />

        <TextView
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="@dimen/margin_little"
            android:layout_marginBottom="@dimen/margin_little"
            android:gravity="center"
            android:minWidth="64dp"
            android:paddingStart="@dimen/margin_little"
            android:paddingEnd="@dimen/margin_little"
            android:text="@string/select"
            android:textAllCaps="true"
            android:textColor="@color/buttonColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
