<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.CategoryPickActivity">
    <LinearLayout
            android:id="@+id/llAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/llUserId"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.3">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="@string/pick_adress"
                    android:textSize="18dp"
                    android:gravity="center_vertical"
                    android:textColor="#56414141"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>
            <ImageView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next_small"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#56414141"
                android:layout_marginTop="4dp"
                />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/llUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/llForgotPassword"
            app:layout_constraintTop_toBottomOf="@+id/llAdress">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="@string/id_user"
                    android:textSize="18dp"
                    android:gravity="center_vertical"
                    android:textColor="#56414141"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>
            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_barcode"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#56414141"
                android:layout_marginTop="4dp"
                />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/llForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/llUserId"
            app:layout_constraintStart_toStartOf="@+id/llUserId"
            android:layout_marginTop="36dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvLogin"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/forgot_password"
                android:textSize="18dp"
                android:gravity="bottom"
                android:textColor="#56414141"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#56414141"
                android:layout_marginTop="4dp"
                />
    </LinearLayout>
    
    <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/buttonColor"
            android:text="@string/enter"
            android:textColor="#fff"
            android:textSize="20dp"
            android:gravity="center"
            />
</androidx.constraintlayout.widget.ConstraintLayout>